--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> 
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="styles.css" data-precedence="next" />
-        <title>@gamma</title>
-        <meta name="description" content="web dev | huge dragon ball fan" />
-        <meta name="author" content="@gamma" />
+        <title>@princevegeta</title>
+        <meta name="description" content="dev | anime fan" />
+        <meta name="author" content="@princevegeta" />
         <meta property="og:title" content="@gamma" />
-        <meta property="og:description" content="web dev | huge dragon ball fan" />
-        <meta property="og:image" content="https://avatars.githubusercontent.com/u/182363233" />
+        <meta property="og:description" content="dev | anime fan" />
+        <meta property="og:image" content="https://avatars.githubusercontent.com/u/179041613" />
         <meta property="og:type" content="website" />
         <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:title" content="@gamma" />
-        <meta name="twitter:description" content="web dev | huge dragon ball fan" />
-        <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/182363233" />
+        <meta name="twitter:title" content="@princevegeta" />
+        <meta name="twitter:description" content="dev | anime fan" />
+        <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/179041613" />
         <meta name="theme-color" content="#ffffff" />
         <link rel="stylesheet" data-font="satoshi" href="." />
         <style data-font="satoshi">
@@ -108,9 +108,9 @@
                             <div class="div5">
                                 <div class="topcontainer false">
                                     <h1 class="titlecontainer false">gamma</h1>
-                                    <h3 class="subtitlecontainer">web dev</h3>
+                                    <h3 class="subtitlecontainer">dev</h3>
                                     <h3 class="subtitlecontainer">・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・</h3>
-                                    <h3 class="subtitlecontainer">huge dragon ball fan</h3>
+                                    <h3 class="subtitlecontainer">anime fan</h3>
                                 </div>
                                 <div class="midboxoutercontainer false">
                                     <div class="midboxinnercontainer">
