--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
                 position: fixed !important; 
                 top: 0; 
                 left: 0; 
-                z-index: -1 !important;
+                z-index: 100 !important;
                 width: 100vw; 
                 height: 100vh; 
                 pointer-events: none;
             }
-            #forest { visibility: hidden; position: absolute; width: 0; height: 0; }
+            #forest { 
+                display: none;
+            }            
         </style>
         <link rel="preload" href="bg.jpg" as="image">     
         <script src="rainyday.js"></script>   
@@ -48,6 +50,7 @@
                 var engine = new RainyDay('canvas', 'forest', window.innerWidth, window.innerHeight);
                 engine.trail = engine.TRAIL_DROPS;
                 engine.gravity = engine.GRAVITY_SIMPLE;
+                engine.reflection = engine.REFLECTION_HQ;
                 engine.rain([ engine.preset(3, 3, 0.88) ], 100);
             }
         </script>
@@ -371,7 +374,7 @@
                         rainy();
                     };
                 }
-                
+
                 if (!isVisible(projectsOuterDiv)) {
                     centerBox = document.querySelector(".centered");
                     const el = document.createElement("p");
