--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <body>
     <img id="forest" src="bg.jpg" class="bgimage" style="filter: blur(8px);" crossorigin="anonymous">
     <canvas id="canvas"></canvas>
-        <div class="main-wrapper
+        <div class="main-wrapper"
             style="
                 --presenceUsernameColor: #ffffff;
                 --presenceStatusColor: rgba(255, 255, 255, 0.7);
