--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
                             <div class="div5">
                                 <div class="topcontainer false">
                                     <h1 class="titlecontainer false">gamma</h1>
-                                    <h3 class="subtitlecontainer">dev</h3>
+                                    <!-- <h3 class="subtitlecontainer">dev</h3> -->
                                     <h3 class="subtitlecontainer">・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・</h3>
-                                    <h3 class="subtitlecontainer">anime fan</h3>
+                                    <!-- <h3 class="subtitlecontainer">anime fan</h3> -->
                                 </div>
                                 <div class="midboxoutercontainer false">
                                     <div class="midboxinnercontainer">
