--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         <div class="div4 centered">
                             <div class="div5">
                                 <div class="topcontainer false">
-                                    <h1 class="titlecontainer false">Prince Vegeta [ Gamma ]</h1>
+                                    <h1 class="titlecontainer false">Prince Vegeta</h1>
                                     <!-- <h3 class="subtitlecontainer">dev</h3> -->
                                     <h3 class="subtitlecontainer">・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・・</h3>
                                     <!-- <h3 class="subtitlecontainer">anime fan</h3> -->
