--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="styles.css" data-precedence="next" />
         <title>@princevegeta</title>
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
         <meta name="description" content="dev | anime fan" />
         <meta name="author" content="@princevegeta" />
         <meta property="og:title" content="@princevegeta" />
@@ -278,14 +279,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-        <div id="profile-popup" class="modal-backdrop">
-            <div class="modal-content">
-                <div id="close-x" class="close-modal-btn">X</div>
-                <div id="modal-body">
-                    <!-- wait 4 data :3 -->
                 </div>
             </div>
         </div>
