--- a/index.html
+++ b/index.html
@@ -206,22 +206,9 @@
                                             <h1 style="font-weight: 550; font-size: 18.5px;">Aname</h1>
                                             <h3 style="font-weight: 300; font-size: 13.5px;">
                                                 <a rel="noopener noreferer" target="_blank" href="https://aname.vercel.app/">
-                                                    https://aname.vercel.app/
+                                                    https://aname.vercel.app
                                                 </a><br><br>
-                                                Explore and watch thousands of anime series and movies. Top airing, recent episodes, and a massive catalog at your fingertips.
-                                            </h3>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="midboxoutercontainer">
-                                    <div class="midboxinnercontainer">
-                                        <div class="midbox">
-                                            <h1 style="font-weight: 550; font-size: 18.5px;">VibeTV</h1>
-                                            <h3 style="font-weight: 300; font-size: 13.5px;">
-                                                <a rel="noopener noreferer" target="_blank" href="https://vibetv-app.vercel.app/">
-                                                    https://vibetv-app.vercel.app/
-                                                </a><br><br>
-                                                Watch the latest movies and TV shows online on VibeTV.
+                                                Explore and watch thousands of anime series and movies at your fingertips.
                                             </h3>
                                         </div>
                                     </div>
@@ -245,9 +232,9 @@
                                             <h1 style="font-weight: 550; font-size: 18.5px;">YumaAPI</h1>
                                             <h3 style="font-weight: 300; font-size: 13.5px;">
                                                 <a rel="noopener noreferer" target="_blank" href="https://yumaapi.vercel.app/">
-                                                    https://yumaapi.vercel.app/
+                                                    https://yumaapi.vercel.app
                                                 </a><br><br>
-                                                YūmaAPI is a fast, unofficial RESTful API that provides detailed anime data with streaming from Hianime, enabling developers to easily integrate rich anime content and streaming into their applications.
+                                                YumaAPI is a fast, unofficial RESTful API that provides detailed anime data with streaming from Hianime, enabling developers to easily integrate rich anime content and streaming into their applications.
                                             </h3>
                                         </div>
                                     </div>
@@ -263,7 +250,7 @@
                                 </div>
                                 <div class="midboxoutercontainer">
                                     <div class="midboxinnercontainer">
-                                        <div class="midbox" style="background-image: url('FALL_thumbnail.png'); background-size: cover; background-repeat: no-repeat;">
+                                        <div class="midbox" styl e="background-image: url('FALL_thumbnail.png'); background-size: cover; background-repeat: no-repeat;">
                                             <div class="midbox" style="backdrop-filter: blur(14px); margin: 0; padding: 0;">
                                                 <h1 style="font-weight: 550; font-size: 18.5px;">FALL</h1>
                                                 <h3 style="font-weight: 300; font-size: 13.5px;">
