--- a/voices.html
+++ b/voices.html
@@ -97,7 +97,7 @@
 </div>
 
 <script>
-const VOICES_URL = "https://tts.mce.run/v1/voices";
+const VOICES_URL = "./files/voices.json";
 const AUDIO_URL  = "https://tts.mce.run/audio";
 
 let voices = [];
