--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <meta name="twitter:description" content="dev | anime fan" />
         <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/179041613" />
         <meta name="theme-color" content="#ffffff" />
-        <link rel="stylesheet" data-font="satoshi" href="." />
+        <link rel="stylesheet" data-font="satoshi" href="https://api.fontshare.com/v2/css?f[]=satoshi@700,500,300&display=swap" />
         <link rel="preconnect" href="https://googlevideo.com" />
         <link rel="preconnect" href="https://i.ytimg.com" />
         <style data-font="satoshi">
