--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             }   
             #buffer-player { position: absolute; top: -9999px; left: -9999px; visibility: hidden; }         
         </style>
-        <link rel="preload" href="bg.png" as="image">     
+        <link rel="preload" href="bg.jpg" as="image">     
         <script src="rainyday.js"></script>   
         <script type="text/javascript">
             function rainy() {
@@ -75,7 +75,7 @@
         </script>
     </head>
     <body>
-    <img id="forest" src="bg.png" class="bgimage" style="filter: blur(8px);" crossorigin="anonymous">
+    <img id="forest" src="bg.jpg" class="bgimage" style="filter: blur(8px);" crossorigin="anonymous">
     <canvas id="canvas"></canvas>
         <div class="main-wrapper"
             style="
